allow running repl using java 9